--- a/sakura-league/content/pages/league-spreadsheet.html
+++ b/sakura-league/content/pages/league-spreadsheet.html
@@ -1,4 +1,4 @@
-<html data-ng-app="spreadsheetApp"></html>
+<html data-ng-app="spreadsheetApp">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Sakura League Spreadsheet</title>
