[SL] Sorting was added, top 20

--- a/sakura-league/content/pages/fantasy-spreadsheet.html
+++ b/sakura-league/content/pages/fantasy-spreadsheet.html
@@ -1,7 +1,7 @@
 <html data-ng-app="fantasyApp">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Sakura League Spreadsheet</title>
+        <title>Sakura Fantasy Spreadsheet</title>
         <link rel="shortcut icon" href="../../etc/images/sakura-icon.jpg" type="image/x-icon" />
 
         <link rel="stylesheet" href="../../etc/styles/spreadsheet.css" />
@@ -38,7 +38,7 @@
                             <img src="{{player.team[3].imageUrl}}" />
                             {{player.team[3].score}}
                         </td>
-                        <td class="team_name">{{player.team[0].score + player.team[1].score + 
+                        <td class="team_total">{{player.team[0].score + player.team[1].score +
                                                 player.team[2].score + player.team[3].score}}
                         </td>
                     </tr>
