--- a/sakura-league/content/pages/league-fantasy.html
+++ b/sakura-league/content/pages/league-fantasy.html
@@ -6,6 +6,7 @@
 
         <link rel="stylesheet" href="../../etc/styles/fantasy.css" />
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
         <script type="text/javascript" src="../../etc/scripts/jsons/spreadsheet.json.js"></script>
         <script type="text/javascript" src="../../etc/scripts/controllers/fantasyLeagueController.js"></script>
