--- a/sakura-league/content/pages/fantasy-spreadsheet.html
+++ b/sakura-league/content/pages/fantasy-spreadsheet.html
@@ -14,28 +14,31 @@
     <body class="fantasy-body" data-ng-controller="fantasySpreadsheetController">
         <div>
         <h1>Sakura Fantasy</h1>
+            <p class="filter" data-ng-if="filteredBy">Filter: <span>{{filteredBy}}</span>
+                <img data-ng-click="clearFilter()" src="../../etc/images/red-cross.png">
+            </p>
             <table class="sakura_table" cellspacing="3" cellpadding="5">
                 <tr class="table_header">
                     <td>#</td><td>Player</td><td colspan="4">Team</td><td>Total Score</td><td>Average Score</td>
                 </tr>
-                <tbody data-ng-repeat="player in fantasySpreadsheet">
+                <tbody data-ng-repeat="player in filteredFantasySpreadsheet">
                     <tr>
                         <td>{{$index + 1}}</td>
                         <td class="team_name">{{player.name}}</td>
                         <td class="team_image">
-                            <img src="{{player.team[0].imageUrl}}" />
+                            <img data-ng-click="applyFilter(player.team[0].name)" src="{{player.team[0].imageUrl}}" />
                             {{player.team[0].score}} ({{player.team[0].evenings}})
                         </td>
                         <td class="team_image">
-                            <img src="{{player.team[1].imageUrl}}" />
+                            <img data-ng-click="applyFilter(player.team[1].name)" src="{{player.team[1].imageUrl}}" />
                             {{player.team[1].score}} ({{player.team[1].evenings}})
                         </td>
                         <td class="team_image">
-                            <img src="{{player.team[2].imageUrl}}" />
+                            <img data-ng-click="applyFilter(player.team[2].name)" src="{{player.team[2].imageUrl}}" />
                             {{player.team[2].score}} ({{player.team[2].evenings}})
                         </td>
                         <td class="team_image">
-                            <img src="{{player.team[3].imageUrl}}" />
+                            <img data-ng-click="applyFilter(player.team[3].name)" src="{{player.team[3].imageUrl}}" />
                             {{player.team[3].score}} ({{player.team[3].evenings}})
                         </td>
                         <td class="team_total">{{player.total}}
