--- a/sakura-league/content/pages/fantasy-spreadsheet.html
+++ b/sakura-league/content/pages/fantasy-spreadsheet.html
@@ -12,8 +12,20 @@
         <script type="text/javascript" src="../../etc/scripts/controllers/fantasySpreadsheetController.js"></script>
     </head>
     <body class="fantasy-body" data-ng-controller="fantasySpreadsheetController">
-        <div>
         <h1>Sakura Fantasy</h1>
+        <div class="mvp-team_wrapper">
+            <div class="mvp-logo_wrapper">
+                <img class="mvp-logo" src="../../etc/images/MVPlogo.png" />
+                <p>Total: {{mvpListTotal}}</p>
+                <p>Average: {{mvpListAverage}}</p>
+            </div>
+            <div class="mvp-team" data-ng-repeat="player in mvpList">
+                <img data-ng-click="applyFilter(player.nickname)" src="{{player.imageUrl}}">
+                <p>{{player.rating}}</p>
+                <p>{{player.total}}</p>
+                <p>{{player.average}}</p>
+            </div>
+        </div>
             <p class="filter" data-ng-if="filteredBy">Filter: <span data-ng-click="clearFilter()">{{filteredBy}}</span>
             </p>
             <table class="sakura_table" cellspacing="3" cellpadding="5">
@@ -28,19 +40,19 @@
                         <td class="team_name">{{player.name}}</td>
                         <td class="team_image">
                             <img data-ng-click="applyFilter(player.team[0].name)" src="{{player.team[0].imageUrl}}" />
-                            {{player.team[0].score}} ({{player.team[0].evenings}})
+                            {{player.team[0].score}} <span data-ng-if="player.team[0].evenings !== 3">({{player.team[0].evenings}})</span>
                         </td>
                         <td class="team_image">
                             <img data-ng-click="applyFilter(player.team[1].name)" src="{{player.team[1].imageUrl}}" />
-                            {{player.team[1].score}} ({{player.team[1].evenings}})
+                            {{player.team[1].score}} <span data-ng-if="player.team[1].evenings !== 3">({{player.team[1].evenings}})</span>
                         </td>
                         <td class="team_image">
                             <img data-ng-click="applyFilter(player.team[2].name)" src="{{player.team[2].imageUrl}}" />
-                            {{player.team[2].score}} ({{player.team[2].evenings}})
+                            {{player.team[2].score}} <span data-ng-if="player.team[2].evenings !== 3">({{player.team[2].evenings}})</span>
                         </td>
                         <td class="team_image">
                             <img data-ng-click="applyFilter(player.team[3].name)" src="{{player.team[3].imageUrl}}" />
-                            {{player.team[3].score}} ({{player.team[3].evenings}})
+                            {{player.team[3].score}} <span data-ng-if="player.team[3].evenings !== 3">({{player.team[3].evenings}})</span>
                         </td>
                         <td class="team_total">{{player.total}}
                         </td>
