--- a/sakura-league/content/pages/league-spreadsheet.html
+++ b/sakura-league/content/pages/league-spreadsheet.html
@@ -13,7 +13,30 @@
 
     <body data-ng-controller="spreadsheetController">
         <h1>Sakura League</h1>
-        <table class="sakura_table" cellspacing="3" cellpadding="5">
+        <div class="tabs">
+            <a href="#teams" data-ng-class="{'active': isTeamList}" data-ng-click="switchTab('teams')">Teams</a>
+            <a href="#players" data-ng-class="{'active': !isTeamList}" data-ng-click="switchTab('players')">Plyaers</a>
+        </div>
+        <table data-ng-if="!isTeamList" class="sakura_table" cellspacing="3" cellpadding="5">
+            <tr class="table_header">
+                <td>#</td><td>Player</td><td>PTS</td><td>Round 1</td><td>Round 2</td><td>Round 3</td>
+                <td data-ng-click="applySorting('total')">Total</td>
+                <td data-ng-click="applySorting('average')">Average</td>
+            </tr>
+            <tbody data-ng-repeat="player in playerList">
+                <tr >
+                    <td>{{$index + 1}}</td>
+                    <td class="player_name">{{player.nickname}}</td>
+                    <td class="player_name">{{player.rating}}</td>
+                    <td class="points">{{player.game_1}}</td>
+                    <td class="points">{{player.game_2}}</td>
+                    <td class="points">{{player.game_3}}</td>
+                    <td class="points">{{player.total}}</td>
+                    <td rowspan="3" class="points">{{player.average}}</td>
+                </tr>
+            </tbody>
+        </table>
+        <table data-ng-if="isTeamList" class="sakura_table" cellspacing="3" cellpadding="5">
             <tr class="table_header">
                 <td>#</td><td>Team</td><td>Players</td><td>Round 1</td><td>Round 2</td><td>Round 3</td>
                 <td>Total Player</td><td data-ng-click="applySorting('total')">Total Team</td>
