[SL] tabs color was changed

--- a/sakura-league/content/pages/league-spreadsheet.html
+++ b/sakura-league/content/pages/league-spreadsheet.html
@@ -15,7 +15,7 @@
         <h1>Sakura League</h1>
         <div class="tabs">
             <a href="#teams" data-ng-class="{'active': isTeamList}" data-ng-click="switchTab('teams')">Teams</a>
-            <a href="#players" data-ng-class="{'active': !isTeamList}" data-ng-click="switchTab('players')">Plyaers</a>
+            <a href="#players" data-ng-class="{'active': !isTeamList}" data-ng-click="switchTab('players')">Players</a>
         </div>
         <table data-ng-if="!isTeamList" class="sakura_table" cellspacing="3" cellpadding="5">
             <tr class="table_header">
