[SL] Round 5 results were added

--- a/sakura-league/content/pages/fantasy-spreadsheet.html
+++ b/sakura-league/content/pages/fantasy-spreadsheet.html
@@ -13,7 +13,7 @@
     </head>
     <body class="fantasy-body" data-ng-controller="fantasySpreadsheetController">
         <h1>Sakura Fantasy</h1>
-        <div class="mvp-team_wrapper">
+        <!-- <div class="mvp-team_wrapper">
             <div class="mvp-logo_wrapper">
                 <img class="mvp-logo" src="../../etc/images/MVPlogo.png" />
                 <p>Total: {{mvpListTotal}}</p>
@@ -25,7 +25,7 @@
                 <p>{{player.total}}</p>
                 <p>{{player.average}}</p>
             </div>
-        </div>
+        </div> -->
             <p class="filter" data-ng-if="filteredBy">Filter: <span data-ng-click="clearFilter()">{{filteredBy}}</span>
             </p>
             <table class="sakura_table" cellspacing="3" cellpadding="5">
