--- a/albatros/content/pages/add-game.html
+++ b/albatros/content/pages/add-game.html
@@ -11,41 +11,232 @@
         <script type="text/javascript" src="../../etc/scripts/controllers/gameController.js"></script>
     </head>
     <body data-ng-controller="gameController" data-ng-init="init()">
-        <input type="file" onchange="angular.element(this).scope().test(this)">
-        <div class="navigation_wrapper">
-            <div class="navigation" data-ng-click="showCompany()">
-                <p>Компании</p>
-            </div>
-            <div class="navigation" data-ng-click="showProduct()">
-                <p>Продукты</p>
-            </div>
+        <div data-ng-if="!isLoaded" class="lds-default"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+            <p>Loading...</p>
         </div>
-        <div class="items_wrapper">
-            <div data-ng-repeat="company in itemList">
-                {{company}}
+        <div data-ng-if="isLoaded">
+            <div class="navigation_wrapper">
+                <a href="javascript:void(0);" class="navigation" data-ng-click="showCompany()">
+                    <p>Компании</p>
+                </a>
+                <a href="javascript:void(0);" class="navigation" data-ng-click="showProduct()">
+                    <p>Продукты</p>
+                </a>
+            </div>
+            <div class="home_screen" data-ng-if="!itemList">
+            </div>
+            <div data-ng-if="itemList" class="items_wrapper">
+                <div>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th data-ng-click="orderByField='name'; reverseSort = !reverseSort">Компания</th>
+                                <th data-ng-click="orderByField='total'; reverseSort = !reverseSort">Итого</th>
+                            </tr>
+                        </thead>
+                        <tr data-ng-repeat="object in itemList|orderBy:orderByField:reverseSort">
+                            <td>{{$index + 1}}</td>
+                            <td>{{object.name}}</td>
+                            <td>{{object.total}}</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </body>
     <style>
-        input {
-            display: block;
+        .home_screen {
+            background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/RStudio_logo_flat.svg/1280px-RStudio_logo_flat.svg.png);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+            width: 86%;
+            height: 100%;
+            display: inline-block;
+
         }
 
         .navigation_wrapper {
-            float: left
+            float: left;
+            margin-top: 50px;
         }
 
         .navigation {
-            border: solid 1px black;
-            width: fit-content;
-            margin: 10px;
+            display: block;
+            margin: 0 10px 10px;
             padding: 10px;
             cursor: pointer;
+            width: 150px;
+            text-align: center;
+            border-radius: 5px;
+            background: #EDEDED;
+            border: 1px double #ddd;
+            color: black;
+            text-decoration: none;
+        }
+
+        .navigation:hover {
+            background: rgb(94, 94, 94);;
+            border: 1px double white;
+            color: white;
+        }
+
+        .navigation:focus {
+            background: black;
+            border: 1px double white;
+            color: white;
         }
 
         .items_wrapper {
             display: inline-block;
-            padding: 8px;
+            width: 86%;
+        }
+
+        .items_wrapper div {
+            margin: 10px;
+        }
+
+        .table {
+            width: 100%;
+            border: none;
+            margin-bottom: 20px;
+            border-collapse: separate;
+        }
+        .table thead th {
+            font-weight: bold;
+            text-align: left;
+            border: none;
+            padding: 10px 15px;
+            background: #EDEDED;
+            font-size: 14px;
+            border-top: 1px solid #ddd;
+            cursor: pointer;
+        }
+        .table tr th:first-child, .table tr td:first-child {
+            border-left: 1px solid #ddd;
+        }
+        .table tr th:last-child, .table tr td:last-child {
+            border-right: 1px solid #ddd;
+        }
+        .table thead tr th:first-child {
+            border-radius: 20px 0 0 0;
+        }
+        .table thead tr th:last-child {
+            border-radius: 0 20px 0 0;
+        }
+        .table tbody td {
+            text-align: left;
+            border: none;
+            padding: 10px 15px;
+            font-size: 14px;
+            vertical-align: top;
+        }
+        .table tbody tr:nth-child(even) {
+            background: #F8F8F8;
+        }
+        .table tbody tr:last-child td{
+            border-bottom: 1px solid #ddd;
+        }
+        .table tbody tr:last-child td:first-child {
+            border-radius: 0 0 0 20px;
+        }
+        .table tbody tr:last-child td:last-child {
+            border-radius: 0 0 20px 0;
+        }
+
+        .lds-default {
+            width: 80px;
+            height: 80px;
+            display: block;
+            position: absolute;
+            top: 35%;
+            left: 47%;
+        }
+
+        .lds-default p {
+            position: absolute;
+            top: 70px;
+            left: 5px;
+            font-size: 20px;
+            color: gray;
+        }
+
+        .lds-default div {
+            position: absolute;
+            width: 6px;
+            height: 6px;
+            background: #ddd;
+            border-radius: 50%;
+            animation: lds-default 1.2s linear infinite;
+        }
+        .lds-default div:nth-child(1) {
+            animation-delay: 0s;
+            top: 37px;
+            left: 66px;
+        }
+        .lds-default div:nth-child(2) {
+            animation-delay: -0.1s;
+            top: 22px;
+            left: 62px;
+        }
+        .lds-default div:nth-child(3) {
+            animation-delay: -0.2s;
+            top: 11px;
+            left: 52px;
+        }
+        .lds-default div:nth-child(4) {
+            animation-delay: -0.3s;
+            top: 7px;
+            left: 37px;
+        }
+        .lds-default div:nth-child(5) {
+            animation-delay: -0.4s;
+            top: 11px;
+            left: 22px;
+        }
+        .lds-default div:nth-child(6) {
+            animation-delay: -0.5s;
+            top: 22px;
+            left: 11px;
+        }
+        .lds-default div:nth-child(7) {
+            animation-delay: -0.6s;
+            top: 37px;
+            left: 7px;
+        }
+        .lds-default div:nth-child(8) {
+            animation-delay: -0.7s;
+            top: 52px;
+            left: 11px;
+        }
+        .lds-default div:nth-child(9) {
+            animation-delay: -0.8s;
+            top: 62px;
+            left: 22px;
+        }
+        .lds-default div:nth-child(10) {
+            animation-delay: -0.9s;
+            top: 66px;
+            left: 37px;
+        }
+        .lds-default div:nth-child(11) {
+            animation-delay: -1s;
+            top: 62px;
+            left: 52px;
+        }
+        .lds-default div:nth-child(12) {
+            animation-delay: -1.1s;
+            top: 52px;
+            left: 62px;
+        }
+        @keyframes lds-default {
+            0%, 20%, 80%, 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.5);
+            }
         }
     </style>
 </html>
