[VP] header and files were renamed

--- a/lesli/content/pages/index.html
+++ b/lesli/content/pages/index.html
@@ -1,16 +1,16 @@
 <html data-ng-app="fantasyApp">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Sakura Fantasy Spreadsheet</title>
+        <title>Lesli 2005</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/exceljs@1.12.1/dist/exceljs.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-        <script type="text/javascript" src="../../etc/scripts/controllers/gameController.js"></script>
+        <script type="text/javascript" src="../../etc/scripts/controllers/mainController.js"></script>
     </head>
-    <body data-ng-controller="gameController" data-ng-init="init()">
+    <body data-ng-controller="mainController" data-ng-init="init()">
         <div data-ng-if="!isLoaded" class="lds-default"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
             <p>Loading...</p>
         </div>
