--- a/lesli/content/pages/index.html
+++ b/lesli/content/pages/index.html
@@ -1,6 +1,7 @@
 <html data-ng-app="fantasyApp">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <link rel="shortcut icon" href="https://pngicon.ru/file/uploads/persik-256x256.png" type="image/x-icon" />
         <title>Lesli 2005</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
