[VP] laading issue was resolved

--- a/lesli/content/pages/index.html
+++ b/lesli/content/pages/index.html
@@ -17,14 +17,27 @@
         </div>
         <div data-ng-if="isLoaded">
             <div class="navigation_wrapper">
-                <a href="javascript:void(0);" class="navigation" data-ng-click="showCompany()">
+                <div data-ng-class="{'active': activeTab === 'company'}" class="navigation" data-ng-click="showCompany()">
                     <p>Компании</p>
-                </a>
-                <a href="javascript:void(0);" class="navigation" data-ng-click="showProduct()">
+                </div>
+                <div data-ng-class="{'active': activeTab === 'product'}" class="navigation" data-ng-click="showProduct()">
                     <p>Продукты</p>
-                </a>
-            </div>
-            <div class="home_screen" data-ng-if="!itemList">
+                </div>
+                <div class="navigation inactive">
+                    <p>Статистика</p>
+                </div>
+                <div class="navigation inactive">
+                    <p>Топ 10 Клиентов</p>
+                </div>
+                <div class="navigation inactive">
+                    <p>Топ 10 Товаров</p>
+                </div>
+                <div class="navigation inactive">
+                    <p>Анализ</p>
+                </div>
+                <div class="navigation inactive">
+                    <p>Обновление</p>
+                </div>
             </div>
             <div data-ng-if="itemList" class="items_wrapper">
                 <div>
@@ -47,17 +60,6 @@
         </div>
     </body>
     <style>
-        .home_screen {
-            background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/RStudio_logo_flat.svg/1280px-RStudio_logo_flat.svg.png);
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: contain;
-            width: 86%;
-            height: 100%;
-            display: inline-block;
-
-        }
-
         .navigation_wrapper {
             float: left;
             margin-top: 50px;
@@ -83,10 +85,16 @@
             color: white;
         }
 
-        .navigation:focus {
+        .active {
             background: black;
             border: 1px double white;
             color: white;
+        }
+
+        .inactive, .inactive:hover {
+            background: peachpuff;
+            color: darkred;
+            border: none;
         }
 
         .items_wrapper {
