--- a/lesli/content/pages/index.html
+++ b/lesli/content/pages/index.html
@@ -46,12 +46,36 @@
                             <tr>
                                 <th>#</th>
                                 <th data-ng-click="orderByField='name'; reverseSort = !reverseSort">Компания</th>
+                                <th data-ng-click="orderByField='Jan'; reverseSort = !reverseSort">Jan</th>
+                                <th data-ng-click="orderByField='Feb'; reverseSort = !reverseSort">Feb</th>
+                                <th data-ng-click="orderByField='Mar'; reverseSort = !reverseSort">Mar</th>
+                                <th data-ng-click="orderByField='Apr'; reverseSort = !reverseSort">Apr</th>
+                                <th data-ng-click="orderByField='May'; reverseSort = !reverseSort">May</th>
+                                <th data-ng-click="orderByField='Jun'; reverseSort = !reverseSort">Jun</th>
+                                <th data-ng-click="orderByField='Jul'; reverseSort = !reverseSort">Jul</th>
+                                <th data-ng-click="orderByField='Aug'; reverseSort = !reverseSort">Aug</th>
+                                <th data-ng-click="orderByField='Sep'; reverseSort = !reverseSort">Sep</th>
+                                <th data-ng-click="orderByField='Oct'; reverseSort = !reverseSort">Oct</th>
+                                <th data-ng-click="orderByField='Nov'; reverseSort = !reverseSort">Nov</th>
+                                <th data-ng-click="orderByField='Dec'; reverseSort = !reverseSort">Dec</th>
                                 <th data-ng-click="orderByField='total'; reverseSort = !reverseSort">Итого</th>
                             </tr>
                         </thead>
                         <tr data-ng-repeat="object in itemList|orderBy:orderByField:reverseSort">
                             <td>{{$index + 1}}</td>
                             <td>{{object.name}}</td>
+                            <td>{{object.Jan}}</td>
+                            <td>{{object.Feb}}</td>
+                            <td>{{object.Mar}}</td>
+                            <td>{{object.Apr}}</td>
+                            <td>{{object.May}}</td>
+                            <td>{{object.Jun}}</td>
+                            <td>{{object.Jul}}</td>
+                            <td>{{object.Aug}}</td>
+                            <td>{{object.Sep}}</td>
+                            <td>{{object.Oct}}</td>
+                            <td>{{object.Nov}}</td>
+                            <td>{{object.Dec}}</td>
                             <td>{{object.total}}</td>
                         </tr>
                     </table>
@@ -114,13 +138,13 @@
         }
         .table thead th {
             font-weight: bold;
-            text-align: left;
             border: none;
             padding: 10px 15px;
             background: #EDEDED;
             font-size: 14px;
             border-top: 1px solid #ddd;
             cursor: pointer;
+            text-align: center;
         }
         .table tr th:first-child, .table tr td:first-child {
             border-left: 1px solid #ddd;
@@ -135,11 +159,14 @@
             border-radius: 0 20px 0 0;
         }
         .table tbody td {
-            text-align: left;
+            text-align: center;
             border: none;
             padding: 10px 15px;
             font-size: 14px;
             vertical-align: top;
+        }
+        .table tbody td:nth-child(2) {
+            text-align: left;
         }
         .table tbody tr:nth-child(even) {
             background: #F8F8F8;
