--- a/lesli/content/pages/index.html
+++ b/lesli/content/pages/index.html
@@ -4,6 +4,10 @@
         <link rel="shortcut icon" href="https://pngicon.ru/file/uploads/persik-256x256.png" type="image/x-icon" />
         <title>Lesli 2005</title>
 
+        <link rel="stylesheet" href="../../etc/styles/main.css" />
+        <link rel="stylesheet" href="../../etc/styles/loader.css" />
+        <link rel="stylesheet" href="../../etc/styles/table.css" />
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/exceljs@1.12.1/dist/exceljs.min.js"></script>
@@ -40,29 +44,71 @@
                     <p>Обновление</p>
                 </div>
             </div>
-            <div data-ng-if="itemList && (activeTab === 'company' || activeTab === 'product')" class="items_wrapper">
+            <div data-ng-if="activeTab === 'company' || activeTab === 'product'" class="items_wrapper">
                 <div>
                     <table class="table">
                         <thead>
                             <tr>
                                 <th>#</th>
-                                <th data-ng-click="orderByField='name'; reverseSort = !reverseSort">{{title}}</th>
-                                <th data-ng-click="orderByField='Jan'; reverseSort = !reverseSort">Jan</th>
-                                <th data-ng-click="orderByField='Feb'; reverseSort = !reverseSort">Feb</th>
-                                <th data-ng-click="orderByField='Mar'; reverseSort = !reverseSort">Mar</th>
-                                <th data-ng-click="orderByField='Apr'; reverseSort = !reverseSort">Apr</th>
-                                <th data-ng-click="orderByField='May'; reverseSort = !reverseSort">May</th>
-                                <th data-ng-click="orderByField='Jun'; reverseSort = !reverseSort">Jun</th>
-                                <th data-ng-click="orderByField='Jul'; reverseSort = !reverseSort">Jul</th>
-                                <th data-ng-click="orderByField='Aug'; reverseSort = !reverseSort">Aug</th>
-                                <th data-ng-click="orderByField='Sep'; reverseSort = !reverseSort">Sep</th>
-                                <th data-ng-click="orderByField='Oct'; reverseSort = !reverseSort">Oct</th>
-                                <th data-ng-click="orderByField='Nov'; reverseSort = !reverseSort">Nov</th>
-                                <th data-ng-click="orderByField='Dec'; reverseSort = !reverseSort">Dec</th>
-                                <th data-ng-click="orderByField='total'; reverseSort = !reverseSort">Итого</th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'name'}"
+                                    data-ng-click="orderByField('name')">{{title}}
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'Jan'}" 
+                                    data-ng-click="orderByField('Jan')">Jan
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'Feb'}"
+                                    data-ng-click="orderByField('Feb')">Feb
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'Mar'}"
+                                    data-ng-click="orderByField('Mar')">Mar
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'Apr'}"
+                                    data-ng-click="orderByField('Apr')">Apr
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'May'}"
+                                    data-ng-click="orderByField('May')">May
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'Jun'}"
+                                    data-ng-click="orderByField('Jun')">Jun
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'Jul'}"
+                                    data-ng-click="orderByField('Jul')">Jul
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'Aug'}"
+                                    data-ng-click="orderByField('Aug')">Aug
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'Sep'}"
+                                    data-ng-click="orderByField('Sep')">Sep
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'Oct'}"
+                                    data-ng-click="orderByField('Oct')">Oct
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'Nov'}"
+                                    data-ng-click="orderByField('Nov')">Nov
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'Dec'}"
+                                    data-ng-click="orderByField('Dec')">Dec
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
+                                <th data-ng-class="{'activeOrderField': currentOrderName === 'total'}"
+                                    data-ng-click="orderByField('total')">Итого
+                                    <i data-ng-class="{'down': isDescOrder,  'up': !isDescOrder}" class="arrow"></i>
+                                </th>
                             </tr>
                         </thead>
-                        <tr data-ng-repeat="object in itemList|orderBy:orderByField:reverseSort">
+                        <tr data-ng-repeat="object in itemList">
                             <td>{{$index + 1}}</td>
                             <td>{{object.name}}</td>
                             <td>{{object.Jan}}</td>
@@ -85,201 +131,4 @@
             <div data-ng-show="activeTab === 'stats'" id="chartContainer"></div>
         </div>
     </body>
-    <style>
-        .navigation_wrapper {
-            float: left;
-            margin-top: 50px;
-        }
-
-        .navigation {
-            display: block;
-            margin: 0 10px 10px;
-            padding: 10px;
-            cursor: pointer;
-            width: 150px;
-            text-align: center;
-            border-radius: 5px;
-            background: #EDEDED;
-            border: 1px double #ddd;
-            color: black;
-            text-decoration: none;
-        }
-
-        .navigation:hover {
-            background: rgb(94, 94, 94);;
-            border: 1px double white;
-            color: white;
-        }
-
-        .active {
-            background: black;
-            border: 1px double white;
-            color: white;
-        }
-
-        .inactive, .inactive:hover {
-            background: peachpuff;
-            color: darkred;
-            border: none;
-        }
-
-        .items_wrapper {
-            width: 86%;
-            display: grid;
-            margin: auto;
-        }
-
-        .items_wrapper div {
-            margin: 10px;
-        }
-
-        .table {
-            width: 100%;
-            border: none;
-            margin-bottom: 20px;
-            border-collapse: separate;
-        }
-        .table thead th {
-            font-weight: bold;
-            border: none;
-            padding: 10px 15px;
-            background: #EDEDED;
-            font-size: 14px;
-            border-top: 1px solid #ddd;
-            cursor: pointer;
-            text-align: center;
-        }
-        .table tr th:first-child, .table tr td:first-child {
-            border-left: 1px solid #ddd;
-        }
-        .table tr th:last-child, .table tr td:last-child {
-            border-right: 1px solid #ddd;
-        }
-        .table thead tr th:first-child {
-            border-radius: 20px 0 0 0;
-        }
-        .table thead tr th:last-child {
-            border-radius: 0 20px 0 0;
-        }
-        .table tbody td {
-            text-align: center;
-            border: none;
-            padding: 10px 15px;
-            font-size: 14px;
-            vertical-align: top;
-        }
-        .table tbody td:nth-child(2) {
-            text-align: left;
-        }
-        .table tbody tr:nth-child(even) {
-            background: #F8F8F8;
-        }
-        .table tbody tr:last-child td{
-            border-bottom: 1px solid #ddd;
-        }
-        .table tbody tr:last-child td:first-child {
-            border-radius: 0 0 0 20px;
-        }
-        .table tbody tr:last-child td:last-child {
-            border-radius: 0 0 20px 0;
-        }
-
-        .lds-default {
-            width: 80px;
-            height: 80px;
-            display: block;
-            position: absolute;
-            top: 35%;
-            left: 47%;
-        }
-
-        .lds-default p {
-            position: absolute;
-            top: 70px;
-            left: 5px;
-            font-size: 20px;
-            color: gray;
-        }
-
-        .lds-default div {
-            position: absolute;
-            width: 6px;
-            height: 6px;
-            background: #ddd;
-            border-radius: 50%;
-            animation: lds-default 1.2s linear infinite;
-        }
-        .lds-default div:nth-child(1) {
-            animation-delay: 0s;
-            top: 37px;
-            left: 66px;
-        }
-        .lds-default div:nth-child(2) {
-            animation-delay: -0.1s;
-            top: 22px;
-            left: 62px;
-        }
-        .lds-default div:nth-child(3) {
-            animation-delay: -0.2s;
-            top: 11px;
-            left: 52px;
-        }
-        .lds-default div:nth-child(4) {
-            animation-delay: -0.3s;
-            top: 7px;
-            left: 37px;
-        }
-        .lds-default div:nth-child(5) {
-            animation-delay: -0.4s;
-            top: 11px;
-            left: 22px;
-        }
-        .lds-default div:nth-child(6) {
-            animation-delay: -0.5s;
-            top: 22px;
-            left: 11px;
-        }
-        .lds-default div:nth-child(7) {
-            animation-delay: -0.6s;
-            top: 37px;
-            left: 7px;
-        }
-        .lds-default div:nth-child(8) {
-            animation-delay: -0.7s;
-            top: 52px;
-            left: 11px;
-        }
-        .lds-default div:nth-child(9) {
-            animation-delay: -0.8s;
-            top: 62px;
-            left: 22px;
-        }
-        .lds-default div:nth-child(10) {
-            animation-delay: -0.9s;
-            top: 66px;
-            left: 37px;
-        }
-        .lds-default div:nth-child(11) {
-            animation-delay: -1s;
-            top: 62px;
-            left: 52px;
-        }
-        .lds-default div:nth-child(12) {
-            animation-delay: -1.1s;
-            top: 52px;
-            left: 62px;
-        }
-        @keyframes lds-default {
-            0%, 20%, 80%, 100% {
-                transform: scale(1);
-            }
-            50% {
-                transform: scale(1.5);
-            }
-        }
-
-        .canvasjs-chart-credit {
-            display: none;
-        }
-    </style>
 </html>
