[VP] chart was refactored

--- a/lesli/content/pages/index.html
+++ b/lesli/content/pages/index.html
@@ -10,10 +10,9 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/exceljs@1.12.1/dist/exceljs.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
-        <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <script type="text/javascript" src="../../etc/scripts/controllers/mainController.js"></script>
     </head>
     <body data-ng-controller="mainController" data-ng-init="init()">
@@ -128,7 +127,7 @@
                     </table>
                 </div>
             </div>
-            <div data-ng-show="activeTab === 'stats'" id="chartContainer"></div>
+            <div data-ng-show="activeTab === 'stats'" id="curve_chart" class="curveChart"></div>
         </div>
     </body>
 </html>
