[VP] icon was added to the dir

--- a/lesli/content/pages/index.html
+++ b/lesli/content/pages/index.html
@@ -1,7 +1,7 @@
 <html data-ng-app="fantasyApp">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link rel="shortcut icon" href="https://pngicon.ru/file/uploads/persik-256x256.png" type="image/x-icon" />
+        <link rel="shortcut icon" href="../../etc/images/persik.png" type="image/x-icon" />
         <title>Lesli 2005</title>
 
         <link rel="stylesheet" href="../../etc/styles/main.css" />
